--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.png" rel="icon">
-    <meta name="author" content="Nghia Minh Luong">
+    <meta name="author" content="Edgarizky">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>BOOZOŃ - Depressed But Well Dressed</title>
@@ -151,7 +151,7 @@
                                                 <div class="tp-caption   tp-resizeme" id="slide-43-layer-2" data-x="['left','left','left','left']" data-hoffset="['31','47','42','227']" data-y="['middle','middle','middle','middle']" data-voffset="['-59','-58','-142','-70']" data-fontsize="['48','48','40','35']" data-lineheight="['50','50','40','35']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 300; color: #000000; letter-spacing: 0px;font-family:Nunito Sans;">This Week’s
                                                     <br> Fashion Finds </div>
                                                 <!-- LAYER NR. 6 -->
-                                                <div class="tp-caption rev-btn " id="slide-43-layer-5" data-x="['right','left','left','left']" data-hoffset="['962','136','133','298']" data-y="['top','top','top','top']" data-voffset="['438','386','381','340']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bc:rgb(255,255,255);bw:0 0 2px 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[8,8,8,8]" data-paddingright="[0,0,0,0]" data-paddingbottom="[8,8,8,8]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 11px; line-height: 16px; font-weight: 700; color: #000000; letter-spacing: 2px;font-family:Roboto;text-transform:uppercase;border-color:rgb(0,0,0);border-style:solid;border-width:0px 0px 2px 0px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Shop Now </div>
+                                                <div class="tp-caption rev-btn " id="slide-43-layer-5" data-x="['right','left','left','left']" data-hoffset="['962','136','133','298']" data-y="['top','top','top','top']" data-voffset="['438','386','381','340']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bc:rgb(255,255,255);bw:0 0 2px 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[8,8,8,8]" data-paddingright="[0,0,0,0]" data-paddingbottom="[8,8,8,8]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 11px; line-height: 16px; font-weight: 700; color: #000000; letter-spacing: 2px;font-family:Roboto;text-transform:uppercase;border-color:rgb(0,0,0);border-style:solid;border-width:0px 0px 2px 0px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;" href="shop-pagination.html">Shop Now </div>
                                             </li>
                                         </ul>
                                         <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -166,7 +166,7 @@
                             <div class="ps-collection--11">
                                 <!--img(src="http://via.placeholder.com/580x400" alt="")--><img class="ps-fullwidth" src="images/collection/home-11/home-11-a.jpg" alt="">
                                 <div class="ps-collection__content">
-                                    <h4>Backpack & <br> Handbags</h4><a class="ps-btn--underline" href="#">Shop now</a>
+                                    <h4>Backpack & <br> Handbags</h4><a class="ps-btn--underline" href="shop-pagination.html">Shop now</a>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                             <div class="ps-collection--11 right">
                                 <!--img(src="http://via.placeholder.com/580x400" alt="")--><img class="ps-fullwidth" src="images/collection/home-11/home-11-b.jpg" alt="">
                                 <div class="ps-collection__content">
-                                    <h4><br> </h4><a class="ps-btn--underline" href="#">Shop now</a>
+                                    <h4><br> </h4><a class="ps-btn--underline" href="shop-pagination.html">Shop now</a>
                                 </div>
                             </div>
                         </div>
@@ -304,12 +304,10 @@
     <div class="ps-subscribe--2 bg--cover" data-background="images/background/subscribe-2.jpg">
         <div class="container">
             <form class="ps-form--subscribe-2" action="do_action" method="post">
-                <h3 class="ps-heading">Get 15% Off Your Next Order</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed fermentum nibh,
-                    <br> vel aliquet massa. Etiam in magna id risus lacinia luctus eget eu est.</p>
+                <h3 class="ps-heading">Not a Boozehound</h3>
+                  <p>Depressed But Well Dressed 
+                    <br> We ship worldwide✈️ - EST .2019</p>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Your Email Address">
-                    <button class="ps-btn">Sign up now</button>
                 </div>
             </form>
         </div>
@@ -320,67 +318,67 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">Shop women</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">All Women</a></li>
-                                <li><a href="#">Clothing</a></li>
-                                <li><a href="#">Shoes</a></li>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">Shop men</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">All Women</a></li>
-                                <li><a href="#">Clothing</a></li>
-                                <li><a href="#">Shoes</a></li>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">Shop men</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">Kids</a></li>
-                                <li><a href="#">Jewelry</a></li>
-                                <li><a href="#">Lookbook</a></li>
-                                <li><a href="#">Backpack</a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">About</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Careers</a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">Useful Links</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">Shipping</a></li>
-                                <li><a href="#">FAQs</a></li>
-                                <li><a href="#">Order Tracking</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 ">
                         <div class="widget widget_categories">
-                            <h3 class="widget-title">Follow Us</h3>
+                            <h3 class="widget-title"></h3>
                             <ul>
-                                <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Twitter</a></li>
-                                <li><a href="#">Pinterest</a></li>
+                                <li><a href="https://www.instagram.com/booz.on/"></a></li>
+                                <li><a href="https://www.instagram.com/booz.on/"></a></li>
+                                <li><a href="https://www.instagram.com/booz.on/"></a></li>
+                                <li><a href="https://www.instagram.com/booz.on/"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -393,23 +391,23 @@
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-footer__copyright">
-                        <p>Copyright &copy; Exists Theme</p>
+                        <p>Copyright &copy; BOOZOŃ 2020</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__nav">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__social">
-                        <li><a href=""><i class="fa fa-facebook"></i>facebook</a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i>twitter</a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i>instagram</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-facebook"></i>facebook</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-twitter"></i>twitter</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-instagram"></i>instagram</a></li>
                     </ul>
                 </div>
             </div>
