--- a/shop-pagination.html
+++ b/shop-pagination.html
@@ -12,10 +12,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.png" rel="icon">
-    <meta name="author" content="Nghia Minh Luong">
+    <meta name="author" content="Edgarizky">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Exist - Shop Pagination</title>
+    <title>BOOZOŃ - Depressed But Well Dressed</title>
     <!-- Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700%7CDroid+Serif:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,900" rel="stylesheet">
@@ -47,70 +47,19 @@
                 <div class="left"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a></div>
                 <div class="center">
                     <ul class="menu">
-                        <li class="menu-item-has-children dropdown"><a href="index.html">Home</a>
-                            <ul class="sub-menu">
-                                <li><a href="index.html">Homepage #1</a></li>
-                                <li><a href="homepage-2.html">Homepage #2</a></li>
-                                <li><a href="homepage-3.html">Homepage #3</a></li>
-                                <li><a href="homepage-4.html">Homepage #4</a></li>
-                                <li><a href="homepage-5.html">Homepage #5</a></li>
-                                <li><a href="homepage-6.html">Homepage #6</a></li>
-                                <li><a href="homepage-7.html">Homepage #7</a></li>
-                                <li><a href="homepage-8.html">Homepage #8</a></li>
-                                <li><a href="homepage-9.html">Homepage #9</a></li>
-                                <li><a href="homepage-10.html">Homepage #10</a></li>
-                                <li><a href="homepage-11.html">Homepage #11</a></li>
-                                <li><a href="homepage-12.html">Homepage #12</a></li>
-                            </ul>
+                        <li class=""><a href="index.html">Home</a>
                         </li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Pages</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li class="menu-item-has-children dropdown"><a href="#">Blog</a>
-                            <ul class="sub-menu">
-                                <li class="menu-item-has-children dropdown"><a href="blog-grid.html">Blog-grid</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog-grid.html">Blog Grid 1</a></li>
-                                        <li><a href="blog-grid-2.html">Blog Grid 2</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="blog-list.html">Blog List</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="right">
-                    <div class="menu-toggle"><span></span></div>
-                    <ul class="header__actions">
-                        <li><a class="ps-search-btn" href="#"><i class="exist-search"></i></a></li>
-                        <li class="header__user"><a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="shopping-action"><i class="exist-user"></i></a>
-                            <ul class="dropdown-menu" aria-labelledby="shopping-action" id="shopping-action">
-                                <li><a href="#">Login</a></li>
-                                <li><a href="#">Register</a></li>
-                                <li><a href="#">Whishlist</a></li>
-                            </ul>
-                        </li>
-                        <li class="header__cart"><a class="ps-shopping" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="shopping-cart"><i class="exist-minicart"></i><span><i>0</i></span></a>
-                            <ul class="dropdown-menu" aria-labelledby="shopping-cart" id="shopping-list">
-                                <li><span class="ps-product--shopping-cart"><a class="ps-product__thumbnail" href="product-detail.html"><img src="images/cart/1.jpg" alt=""></a><span class="ps-product__content"><a class="ps-product__title" href="#">T-shirt blue with slogan</a><span class="ps-product__quantity">1 x <span> $5250.00</span></span>
-                                    </span><a class="ps-product__remove" href="#"><i class="fa fa-trash"></i></a></span>
-                                </li>
-                                <li><span class="ps-product--shopping-cart"><a class="ps-product__thumbnail" href="product-detail.html"><img src="images/cart/2.jpg" alt=""></a><span class="ps-product__content"><a class="ps-product__title" href="#">T-shirt blue with slogan</a><span class="ps-product__quantity">1 x <span> $5250.00</span></span>
-                                    </span><a class="ps-product__remove" href="#"><i class="fa fa-trash"></i></a></span>
-                                </li>
-                                <li class="total">
-                                    <p>Total: <span> $5250.00</span></p><a class="ps-btn" href="#">Go to cart</a>
-                                </li>
-                            </ul>
-                        </li>
+                        <li><a href="shop-pagination.html">Shop</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="ps-hero bg--cover" data-background="images/hero/shop-1.jpg">
+    <div class="ps-hero bg--cover" data-background="images/hero/shop-2.jpg">
         <div class="container">
-            <h2 class="ps-hero__heading">The Shop</h2>
+            <h2 class="ps-hero__heading">Our Products</h2>
             <div class="ps-breadcrumb">
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a></li>
@@ -125,27 +74,14 @@
                 <div class="ps-filter">
                     <div class="ps-filter__left">
                         <ul class="ps-filter__categories">
-                            <li class="current"><a href="#">All</a></li>
-                            <li><a href="#">Clothing</a></li>
-                            <li><a href="#">Footwear</a></li>
-                            <li><a href="#">Bags</a></li>
-                            <li><a href="#">Accessories</a></li>
+                            <li class="current"><a href="#">All Categories</a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
                         </ul>
                     </div>
-                    <div class="ps-filter__right">
-                        <select class="ps-select" title="5 Columns">
-                            <option value="1">Option 1</option>
-                            <option value="2">Option 2</option>
-                            <option value="3">Option 3</option>
-                        </select>
-                        <select class="ps-select" title="Filter">
-                            <option value="1">Option 1</option>
-                            <option value="2">Option 2</option>
-                            <option value="3">Option 3</option>
-                            <option value="4">Option 4</option>
-                            <option value="5">Option 5</option>
-                        </select>
-                    </div>
+                </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 ">
@@ -455,8 +391,8 @@
                 <div class="ps-shop__morelink text-center mt-40">
                     <div class="ps-pagination">
                         <ul class="pagination">
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
+                            <li class="active"><a href="shop-pagination.html">1</a></li>
+                            <li><a href="shop-allcategory.html">2</a></li>
                             <li><a href="#">3</a></li>
                             <li><a href="#">4</a></li>
                             <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
@@ -469,38 +405,37 @@
     <div class="ps-subscribe--2 bg--cover" data-background="images/background/subscribe-2.jpg">
         <div class="container">
             <form class="ps-form--subscribe-2" action="do_action" method="post">
-                <h3 class="ps-heading">Get 15% Off Your Next Order</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed fermentum nibh,
-                    <br> vel aliquet massa. Etiam in magna id risus lacinia luctus eget eu est.</p>
+                <h3 class="ps-heading">Not a Boozehound</h3>
+                <p>Depressed But Well Dressed 
+                    <br> We ship worldwide✈️ - EST .2019</p>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Your Email Address">
-                    <button class="ps-btn">Sign up now</button>
                 </div>
             </form>
         </div>
     </div>
     <footer class="ps-footer--1">
+        <div class="ps-inner-footer black">
         <div class="ps-container-fluid">
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-footer__copyright">
-                        <p>Copyright &copy; Exists Theme</p>
+                        <p>Copyright &copy; BOOZOŃ 2020</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__nav">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__social">
-                        <li><a href=""><i class="fa fa-facebook"></i>facebook</a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i>twitter</a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i>instagram</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-facebook"></i>facebook</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-twitter"></i>twitter</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-instagram"></i>instagram</a></li>
                     </ul>
                 </div>
             </div>
