--- a/shop-pagination.html
+++ b/shop-pagination.html
@@ -57,6 +57,25 @@
             </div>
         </nav>
     </header>
+    <div class="header header--mobile">
+        <div class="container"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a>
+            <div class="menu-toggle"><span></span></div>
+            <ul class="header__actions">
+                <li><a class="" href="#"><i class=""></i></a></li>
+                <li><a href="#"><i class=""></i></a></li>
+                <li><a class="" href="#"><i class=""></i><span><i></i></span></a></li>
+            </ul>
+            <ul class="menu">
+                <li class=""><a href="index.html">Home</a>
+                </li>
+                <li><a href="shop-pagination.html">Shop</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="ps-hero bg--cover" data-background="images/hero/shop-2.jpg">
         <div class="container">
             <h2 class="ps-hero__heading">Our Products</h2>
@@ -75,10 +94,6 @@
                     <div class="ps-filter__left">
                         <ul class="ps-filter__categories">
                             <li class="current"><a href="#">All Categories</a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
                         </ul>
                     </div>
                 </div>
@@ -414,7 +429,6 @@
         </div>
     </div>
     <footer class="ps-footer--1">
-        <div class="ps-inner-footer black">
         <div class="ps-container-fluid">
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
