--- a/shop-pagination.html
+++ b/shop-pagination.html
@@ -121,14 +121,14 @@
                         <div class="ps-product--1" data-mh="product-item">
                             <div class="ps-product__thumbnail">
                                 <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                                <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content.html"><i class="exist-minicart"></i>Add to cart</a>
+                                <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-1.html"><i class="exist-minicart"></i>View Product</a>
                                 <ul class="ps-product__actions">
                                     <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                     <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Take Your Time</a><span class="ps-product__price">$5250.00</span>
                             </div>
                         </div>
                     </div>
