--- a/product-creative-content-1.html
+++ b/product-creative-content-1.html
@@ -93,8 +93,8 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__thumbnail">
                         <div class="ps-product__images-large">
-                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/main-1.jpg"><i class="exist-zoom"></i></a></div>
-                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/main-1.jpg"><i class="exist-zoom"></i></a></div>
+                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-1.jpg"><i class="exist-zoom"></i></a></div>
+                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-1.jpg"><i class="exist-zoom"></i></a></div>
                             <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-1.jpg"><i class="exist-zoom"></i></a></div>
                         </div>
                         <div class="ps-product__nav">
@@ -288,13 +288,12 @@
     </div>
     <div class="ps-subscribe--2 bg--cover" data-background="images/background/subscribe-2.jpg">
         <div class="container">
-            <form class="ps-form--subscribe-2" action="do_action" method="post">
-                <h3 class="ps-heading">Get 15% Off Your Next Order</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed fermentum nibh,
-                    <br> vel aliquet massa. Etiam in magna id risus lacinia luctus eget eu est.</p>
+              <form class="ps-form--subscribe-2" action="do_action" method="post">
+                <h3 class="ps-heading">Not a Boozehound</h3>
+                <p>Depressed But Well Dressed 
+                    <br> We ship worldwide✈️ 
+                    <br> EST .2019</p>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Your Email Address">
-                    <button class="ps-btn">Sign up now</button>
                 </div>
             </form>
         </div>
@@ -304,16 +303,16 @@
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-footer__copyright">
-                        <p>Copyright &copy; Exists Theme</p>
+                        <p>Copyright &copy; BOOZOŃ 2020</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__nav">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
