--- a/product-creative-content-1.html
+++ b/product-creative-content-1.html
@@ -106,7 +106,8 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__info">
-                        <h1 class="ps-product__title">See Through Vol.1 - Take Your Time</h1>
+                        <h1 class="ps-product__title">See Through Vol.1 
+                            <br>Take Your Time</h1>
                         <h4 class="ps-product__price">IDR.149.000,-</h4>
                         <div class="ps-product__rating">
                             <select class="ps-rating">
