--- a/product-creative-content-1.html
+++ b/product-creative-content-1.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__info">
-                        <h1 class="ps-product__title">See Through Vol.1 
+                        <h1 class="ps-product__title">[SEE THROUGH Vol. 1] 
                             <br>Take Your Time</h1>
                         <h4 class="ps-product__price">IDR.149.000,-</h4>
                         <div class="ps-product__rating">
@@ -138,7 +138,7 @@
                             <h5 class="mt-30"> Size : 500 gr</h5>
                         <div class="ps-product__divider"></div>
                         <div class="ps-product__shopping">
-                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Add to cart</button>
+                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Shop Now</button>
                             <ul class="ps-product__cart-action">
                                 <li><a href="#"><i class="exist-heart"></i>Best Seller Product</a></li>
                                 <li><a href="#"><i class=""></i></a></li>
