--- a/product-creative-content-1.html
+++ b/product-creative-content-1.html
@@ -291,9 +291,9 @@
         <div class="container">
               <form class="ps-form--subscribe-2" action="do_action" method="post">
                 <h3 class="ps-heading">Not a Boozehound</h3>
-                <p>Depressed But Well Dressed 
+                <p>Depressed But Well Dressed </p>
                     <br> We ship worldwide✈️ 
-                    <br> EST .2019</p>
+                    <br> EST .2019
                 <div class="form-group">
                 </div>
             </form>
